--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 0%;
-    background-color: rgb(234, 234, 234);
+    background-color: whitesmoke;
 }
 
 article{
@@ -17,10 +17,12 @@ article{
     color: #50504f;
     transition: all 200ms ease-out;
     cursor: pointer;
+    box-shadow: 10px 10px 5px 0px rgb(234, 234, 234);
 }
 
 article:hover{
-    scale: 1.025;
+    scale: 1.0125;
+    box-shadow: 10px 10px 5px 0px rgb(217, 217, 217);
 }
 
 .product_img{
@@ -45,6 +47,7 @@ article:hover{
 .name{
     font-family: "Lato-bold", sans-serif;
     grid-row: 1/2;
+    color: #e67a14;
 }
 
 .price{
@@ -54,6 +57,7 @@ article:hover{
     margin-right: 0.5em;
     font-size: 18pt;
     font-weight: 700;
+    color: #415f94;
 }
 
 .info_container{
@@ -66,6 +70,8 @@ article:hover{
     grid-column: 1/3;
     font-family: "Lato-light", sans-serif;
     font-weight: 300;
+    margin: 0;
+    margin-bottom: 1em;
 }
 
 .products{
@@ -74,4 +80,27 @@ article:hover{
     width: 90%;
     grid-template-columns: 1fr 1fr 1Fr 1fr;
     row-gap: 2em;
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
+}
+
+.filter{
+    display: flex;
+    gap: 2em;
+}
+
+.filter a{
+    padding: 0.25em 1.5em;
+    border: #e67a14 3px solid;
+    border-radius: 25px;
+    text-decoration: none;
+    color: #415f94;
+    font-family: "Lato-regular", sans-serif;
+    font-weight: 700;
+    margin-top: 105px;
+    transition: all 200ms ease-out;
+}
+
+.filter a:hover{
+    scale: 1.125;
 }
