--- a/css/components.css
+++ b/css/components.css
@@ -10,6 +10,7 @@ nav{
     justify-content: space-between;
     position: fixed;
     z-index: 900;
+    overflow: visible;
 }
 
 .logo{
@@ -55,4 +56,174 @@ nav{
     background-size: cover;
     background-repeat: no-repeat;
     cursor: pointer;
+    position: relative;
+}
+
+.count{
+    border-radius: 100%;
+    padding: 0;
+    background-color: #e67a14;
+    color: white;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    position: absolute;
+    top: -2.5px;
+    right: -5px;
+    margin: 0;
+    font-family: "Lato-regular", sans-serif;
+}
+
+.shopping_cart_items{
+    width: 500px;
+    font-family: "Lato-regular", sans-serif;
+    height: fit-content;
+    width: fit-content;
+    position: absolute;
+    background-color: white;
+    color: #50504f;
+    top: 125%;
+    right: 7em;
+    border-radius: 15px;
+    overflow: visible;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    pointer-events: none;
+    display: flex;
+    /* max-height: 600px;*/
+
+}
+
+.shopping_cart_items.show {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s ease-in-out;
+    pointer-events: all;
+}
+
+.shopping_cart_item_img{
+    width: 150px;
+    height: 150px;
+    background-image: url(../images/lamp_groen.webp);
+    background-size: cover;
+    border-radius: 15px;
+    margin: 1em;
+}
+
+.shopping_cart_info_grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin-left: 1.5em;
+    justify-items: center;
+    align-items: center;
+    margin-right: 1.5em;
+}
+
+.shopping_cart_item_amount{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    justify-self: flex-end;
+}
+
+.shopping_cart_item_price{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    justify-self: first baseline;
+}
+
+.delete{
+    background-image: url(../images/close.svg);
+    width: 35px;
+    height: 35px;
+    justify-self: flex-end;
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.divider{
+    height: 25px;
+    width: 30px;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-image: url(../images/shopping_cart_divider.svg);
+    position: absolute;
+    top: -22px;
+    right: 15px;
+}
+
+.item{
+    display: flex;
+}
+
+.divider2{
+    width: 80%;
+    height: 4px;
+    background-color: #415f94;
+    border-radius: 15px;
+    align-self: center;
+    flex-shrink: 0;
+}
+
+.indicator{
+    width: 35px;
+    height: 25px;
+    background-image: url(../images/chevron-up.svg);
+    background-position: center;
+    background-size: cover;
+    transform-origin: center;
+    transform: rotate(180deg);
+    transition: all 0.3s ease-in-out;
+}
+
+.shopping_cart_flex{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    padding: 0.5em;
+    border-radius: 15px;
+    border: #e67a14 solid 3px;
+    cursor: pointer;
+}
+
+.items{
+    display: flex;
+    gap: 1.25em;
+    flex-direction: column;
+    justify-items: center;
+    max-height: 600px;
+    overflow-y: scroll;
+    flex-shrink: 0;
+}
+
+.totaal_bedrag{
+    /* margin-left: 1em;
+    margin-right: 1em; */
+    width: 100%;
+    align-self: center;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+}
+
+.totaal_bedrag h2{
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+.btn_bestellen{
+    background-color: #e67a14;
+    color: white;
+    padding: 0.75em 2em;
+    width: fit-content;
+    border-radius: 15px;
+    cursor: pointer;
+    align-self: center;
+    margin-top: 0;
+    transition: all 200ms ease-out;
+}
+
+.btn_bestellen:hover{
+    scale: 1.1;
 }
