--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 0%;
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
 }
 
 article{
@@ -78,7 +78,7 @@ article:hover{
     justify-self: center;
     display: grid;
     width: fit-content;
-    grid-template-columns: 1fr 1fr 1Fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 4em;
     padding-top: 2.5em;
     padding-bottom: 2.5em;
