--- a/css/details.css
+++ b/css/details.css
@@ -3,7 +3,8 @@ body{
     font-family: "Lato-bold", sans-serif;
     margin: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 h1{
     font-size: 32pt;
@@ -42,6 +43,7 @@ section{
     display: flex;
     justify-content: space-evenly;
     gap: 2em;
+    width: 95%;
     max-width: 95%;
 }
 .left{
@@ -311,4 +313,79 @@ label[for="rood"]::before {
     justify-content: space-between;
     align-content: center;
     color: #e67a14;
+}
+
+/*! recomended */
+.recomended{
+    width: 95%;
+    max-width: 95%;
+}
+article{
+    background-color: white;
+    width: fit-content;
+    border-radius:15px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #50504f;
+    transition: all 200ms ease-out;
+    cursor: pointer;
+    box-shadow: 10px 10px 5px 0px rgb(234, 234, 234);
+    width: 300px;
+    height: 525px;
+}
+article:hover{
+    scale: 1.0125;
+    box-shadow: 10px 10px 5px 0px rgb(217, 217, 217);
+}
+.product_img{
+    width: 300px;
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+}
+.name{
+    font-family: "Lato-bold", sans-serif;
+    grid-row: 1/2;
+    color: #e67a14;
+    margin-left: 0.25em;
+    max-width: 90%;
+    text-overflow: ellipsis;
+}
+.price{
+    font-family: "Lato-bold", sans-serif;
+    grid-row: 1/2;
+    justify-self: flex-end;
+    margin-right: 0.5em;
+    font-size: 18pt;
+    font-weight: 700;
+    color: #415f94;
+    margin-right: 0.25em;
+}
+.info_container{
+    display: grid;
+    align-items: center;
+}
+.description{
+    width: 280px;
+    grid-column: 1/3;
+    font-family: "Lato-light", sans-serif;
+    font-weight: 300;
+    margin: 0;
+    margin-bottom: 1em;
+    max-height: 6em;
+    text-overflow: ellipsis;
+}
+.products{
+    justify-self: center;
+    display: grid;
+    width: fit-content;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 4em;
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
+    justify-items: center;
+    align-items: center;
 }
