--- a/css/details.css
+++ b/css/details.css
@@ -206,11 +206,13 @@ label[for="rood"]::before {
     outline: #e67a14 solid 3px;
     border-radius: 10px;
     padding: 0.25em;
+    text-align: center;
 }
 .express{
     outline: #e67a14 solid 3px;
     border-radius: 10px;
     padding: 0.25em;
+    text-align: center;
 }
 .add_to{
     width: 35px;
