--- a/css/details.css
+++ b/css/details.css
@@ -298,6 +298,16 @@ label[for="rood"]::before {
     color: #e67a14;
 }
 
+.error{
+    background-color: rgb(216, 32, 32);
+    color: #f5f5f5;
+    font-size: 14pt;
+    margin: 0;
+    padding: 0.25em 1em;
+    border-radius: 0.25em;
+    display: none;
+}
+
 /*! recomended */
 .recomended{
     width: 95%;
