feat: enhance shopping cart functionality with dynamic image rendering and improved stock management

--- a/css/components.css
+++ b/css/components.css
@@ -115,10 +115,8 @@ nav{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    margin-left: 1.5em;
     justify-items: center;
     align-items: center;
-    margin-right: 1.5em;
 }
 
 .shopping_cart_item_amount{
@@ -144,8 +142,16 @@ nav{
     cursor: pointer;
 }
 
-.item{
+.item {
     display: flex;
+    width: 100%;
+    max-width: calc(100% - 2em); /* Houd rekening met de marges */
+    margin-left: 1em;
+    margin-right: 1em;
+    flex: 0 1 auto;
+    padding: 0;
+    justify-content: space-between;
+    box-sizing: border-box; /* Zorg ervoor dat padding en marges worden meegerekend */
 }
 
 .divider2{
@@ -184,8 +190,10 @@ nav{
     flex-direction: column;
     justify-items: center;
     max-height: 600px;
+    overflow-x: hidden;
     overflow-y: scroll;
     flex-shrink: 0;
+    width: 500px;
 }
 
 .totaal_bedrag{
