--- a/css/order.css
+++ b/css/order.css
@@ -251,3 +251,41 @@
 #express:checked + label::before {
     background-color: #415f94;
 }
+
+#add{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    gap: 1em;
+    padding: 0.5em;
+    border: #e67a14 3px solid;
+    border-radius: 100px;
+}
+.plus{
+    width: 25px;
+    height: 25px;
+    background-image: url(../images/plus-circle-f.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+.minus{
+    width: 25px;
+    height: 25px;
+    background-image: url(../images/minus-circle-f.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+.deliver_amount{
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    font-size: 12pt;
+    gap: 2em;
+}
